# Quark

./: .gitignore  COPYING.txt  Quark.hs  QuarkInterpreter.hs  QuarkLang.cabal  QuarkParser.hs  QuarkType.hs  README.md  api.yaml  geany_run_script.bat  guide.html  guideRender.rb  guide_template.html  index.html  intro.md  prelude.qrk  stdlib.qrk
Doc/: TODO.md  intro.md
Quark/: CoreFunc.hs  CoreFuncUtils.hs  Errors.hs  Eval.hs  Inline.hs  Interpret.hs  Optimize.hs  Parse.hs  QType.hs  QVM.hs  QuoteEval.hs  QuoteUtils.hs  REPL.hs  Serialize.hs  Type.hs
css/: guide-style.css  style.css
