name:               QuarkLang
version:            0.1.1.0
homepage:           kdt.io/~/quark
license:            PublicDomain
license-file:       COPYING.txt
author:             ⊥
maintainer:         none
category:           Language
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: *.md
data-files:         prelude.qrk

executable quark
  main-is:          Quark.hs
  other-modules:    Paths_QuarkLang
  build-depends:    base >=4.8 && <4.9, containers >=0.5 && <0.6, parsec >=3.1 && <3.2, process >=1.2 && <1.3
  default-language: Haskell2010
  ghc-options:      -O2
